datasets/dataset_txt/pipenv/pipenv_1387.txt
kimvais commented on 13 Mar 2018
Expected result
Working pipenv installation
Actual result
Successfully installed pipenv-11.6.0
PS C:\Users\kimvais\PycharmProjects\dbv2> pipenv shell
Traceback (most recent call last):
  File "c:\users\kimvais\appdata\local\programs\python\python36\lib\runpy.py", line 193, in _run_module_as_main
    "__main__", mod_spec)
  File "c:\users\kimvais\appdata\local\programs\python\python36\lib\runpy.py", line 85, in _run_code
    exec(code, run_globals)
  File "C:\Users\kimvais\AppData\Local\Programs\Python\Python36\Scripts\pipenv.exe\__main__.py", line 9, in <module>
  File "c:\users\kimvais\appdata\local\programs\python\python36\lib\site-packages\pipenv\vendor\click\core.py", line 722, in __call__
    return self.main(*args, **kwargs)
  File "c:\users\kimvais\appdata\local\programs\python\python36\lib\site-packages\pipenv\vendor\click\core.py", line 697, in main
    rv = self.invoke(ctx)
  File "c:\users\kimvais\appdata\local\programs\python\python36\lib\site-packages\pipenv\vendor\click\core.py", line 1066, in invoke
    return _process_result(sub_ctx.command.invoke(sub_ctx))
  File "c:\users\kimvais\appdata\local\programs\python\python36\lib\site-packages\pipenv\vendor\click\core.py", line 895, in invoke
    return ctx.invoke(self.callback, **ctx.params)
  File "c:\users\kimvais\appdata\local\programs\python\python36\lib\site-packages\pipenv\vendor\click\core.py", line 535, in invoke
    return callback(*args, **kwargs)
  File "c:\users\kimvais\appdata\local\programs\python\python36\lib\site-packages\pipenv\cli.py", line 259, in shell
    from . import core
  File "c:\users\kimvais\appdata\local\programs\python\python36\lib\site-packages\pipenv\core.py", line 24, in <module>
    import pipdeptree
  File "c:\users\kimvais\appdata\local\programs\python\python36\lib\site-packages\pipenv\vendor\pipdeptree.py", line 16, in <module>
    import pip9
  File "c:\users\kimvais\appdata\local\programs\python\python36\lib\site-packages\pipenv\vendor\pip9\__init__.py", line 28, in <module>
    from pip9.vcs import git, mercurial, subversion, bazaar  # noqa
  File "c:\users\kimvais\appdata\local\programs\python\python36\lib\site-packages\pipenv\vendor\pip9\vcs\subversion.py", line 9, in <module>
    from pip9.index import Link
  File "c:\users\kimvais\appdata\local\programs\python\python36\lib\site-packages\pipenv\vendor\pip9\index.py", line 31, in <module>
    from pip9.wheel import Wheel, wheel_ext
  File "c:\users\kimvais\appdata\local\programs\python\python36\lib\site-packages\pipenv\vendor\pip9\wheel.py", line 6, in <module>
    import compileall
  File "c:\users\kimvais\appdata\local\programs\python\python36\lib\compileall.py", line 20, in <module>
    from concurrent.futures import ProcessPoolExecutor
  File "c:\users\kimvais\appdata\local\programs\python\python36\lib\site-packages\pipenv\..\concurrent\futures\__init__.py", line 8, in <module>
    from concurrent.futures._base import (FIRST_COMPLETED,
  File "c:\users\kimvais\appdata\local\programs\python\python36\lib\site-packages\pipenv\..\concurrent\futures\_base.py", line 381
    raise exception_type, self._exception, self._traceback
                        ^
SyntaxError: invalid syntax
Steps to replicate
In windows 10 powershell with python 3.6.2 installed do:
pip install pipenv
pipenv shell